dev/redis/cache-001/multiple-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: session-dev
  name: redis-common
  labels:
    app: redis-common
spec:
  # type: LoadBalancer
  # loadBalancerIP: 192.168.0.79
  ports:
    - port: 6379
      targetPort: 6379
      name: redis-cache
    - port: 6380
      targetPort: 6380
      name: redis-proxy
  selector:
    #app: redis-cache
    component: redis
