dev/redis/cache-001/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: session-dev
  name: redis-cache-001
  labels:
    app: redis-cache-001
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis-cache
    - port: 6380
      targetPort: envoy
      name: envoy
    - port: 8101
      targetPort: dyno
      name: dyno
    - port: 8102
      targetPort: dyno-client
      name: dyno-client
    - port: 22222
      targetPort: dyno-admin
      name: dyno-admin
  selector:
    app: redis-cache-001
